--- a/app/src/main/res/layout/tile.xml
+++ b/app/src/main/res/layout/tile.xml
@@ -2,6 +2,7 @@
 <ImageButton xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="32dp"
              android:layout_height="32dp"
+             xmlns:tools="http://schemas.android.com/tools"
              android:background="@android:color/transparent"
              android:scaleType="centerCrop"
-             android:src="@drawable/ic_tile_hidden" />
+             tools:src="@drawable/ic_tile_hidden" />
