--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -4,7 +4,53 @@
                                                    xmlns:tools="http://schemas.android.com/tools"
                                                    android:layout_width="match_parent"
                                                    android:layout_height="match_parent"
+                                                   android:background="@color/grey"
                                                    tools:context=".ui.fragments.GameFragment">
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/glTopBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="50dp" />
+
+    <TextView
+        android:id="@+id/tvFlagsRemaining"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="2dp"
+        android:background="@color/black"
+        android:textColor="@color/red"
+        android:textSize="34sp"
+        app:layout_constraintBottom_toTopOf="@+id/glTopBar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="020" />
+
+    <ImageButton
+        android:id="@+id/ibReset"
+        android:layout_width="44dp"
+        android:layout_height="44dp"
+        android:background="@android:color/transparent"
+        android:scaleType="centerCrop"
+        android:src="@drawable/ic_replay_circle"
+        app:layout_constraintBottom_toTopOf="@+id/glTopBar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tvTimer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="2dp"
+        android:background="@color/black"
+        android:textColor="@color/red"
+        android:textSize="34sp"
+        app:layout_constraintBottom_toTopOf="@+id/glTopBar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="05:00" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvBoard"
@@ -14,7 +60,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/glTopBar"
         app:spanCount="10" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
