--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -45,12 +45,12 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="2dp"
         android:background="@color/black"
+        android:text="@string/start_time"
         android:textColor="@color/red"
         android:textSize="34sp"
         app:layout_constraintBottom_toTopOf="@+id/glTopBar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="05:00" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvBoard"
