--- a/app/src/main/res/layout/tile.xml
+++ b/app/src/main/res/layout/tile.xml
@@ -5,4 +5,6 @@
              android:layout_height="32dp"
              android:background="@android:color/transparent"
              android:scaleType="centerCrop"
+             android:soundEffectsEnabled="false"
+             tools:ignore="ContentDescription"
              tools:src="@drawable/ic_tile_hidden" />
