Update adapter view holder to take ImageView
Allows for use of image view methods, mainly setImageResource.

--- a/app/src/main/res/layout/tile.xml
+++ b/app/src/main/res/layout/tile.xml
@@ -6,5 +6,5 @@
              android:background="@android:color/transparent"
              android:scaleType="centerCrop"
              android:soundEffectsEnabled="false"
-             tools:ignore="ContentDescription"
-             tools:src="@drawable/ic_tile_hidden" />
+             android:src="@drawable/ic_tile_hidden"
+             tools:ignore="ContentDescription" />
