--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -66,6 +66,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvBoard"
+        android:overScrollMode="never"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
